--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html>
+<head>
+<style>
+iframe {
+  height: 400px;
+  width: 400px;
+  border: none;
+}
+</style>
+<script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
+</head>
 <body>
 <h1>frequent processing</h1>
+<iframe src="./sketches/test/index.html"/>
 </body>
 </html>
