Adapted snake for gallery

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           >
             <a 
               v-bind:id="sketch.id"
-              v-bind:href="sketch.path"
+              v-bind:href="sketch.hash"
             >&nbsp;&nbsp;{{ sketch.name }}</a>
           </li>
           <li class="spacer"> 
